add botao de sair

--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -39,6 +39,7 @@
       <div class="topbar-right">
         <button pButton icon="pi pi-bell" class="p-button-rounded p-button-text text-white"></button>
         <button pButton icon="pi pi-cog" class="p-button-rounded p-button-text text-white"></button>
+        <button pButton icon="pi pi-power-off" class="p-button-rounded p-button-text text-white" (click)="logout()" pTooltip="Sair" tooltipPosition="bottom"></button>
       </div>
     </div>
 
