--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -4,7 +4,7 @@
       <div class="logo-icon">
         <i class="pi pi-chart-line"></i>
       </div>
-      <h1 class="brand-title">Financeiro</h1>
+      <h1 class="brand-title">Nexus Finance</h1>
     </div>
 
     <form [formGroup]="form" (ngSubmit)="onSubmit()" class="login-form">
@@ -55,18 +55,5 @@
       <p-message *ngIf="error" severity="error" [text]="error" styleClass="w-full mt-3"></p-message>
     </form>
 
-    <div class="social-login">
-      <div class="divider">
-        <span>Sign in with</span>
-      </div>
-      <div class="social-icons">
-        <button class="social-btn facebook">
-          <i class="pi pi-facebook"></i>
-        </button>
-        <button class="social-btn twitter">
-          <i class="pi pi-twitter"></i>
-        </button>
-      </div>
-    </div>
   </div>
 </div>
